--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@adminjs/express": "^4.1.0",
+    "@adminjs/nestjs": "^4.0.1",
+    "@adminjs/prisma": "^1.0.3",
+    "@adminjs/sequelize": "^2.1.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "@prisma/client": "^3.13.0",
+    "adminjs": "^5.10.0",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
+    "express": "^4.18.0",
     "mssql": "^8.0.2",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -39,10 +47,10 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
     "@types/lodash": "^4.14.180",
     "@types/mssql": "^7.1.5",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -50,6 +58,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "prisma": "^3.13.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
