tasks now syncing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: 
       context: .
       dockerfile: ./server/Dockerfile
+      target: production
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
     env_file:
