--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
     build:
       context: .
       dockerfile: ./server/Dockerfile
+      target: development
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
       - 9229:9229
@@ -18,7 +19,6 @@ services:
       - .:/app
     tty: true
     stdin_open: true
-    command: sh -c "npm run start:debug" # override the container's start command and run in debug mode
   
   database:
     image: postgres:14.2
