--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@adminjs/sequelize": "^2.1.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.13.0",
@@ -35,7 +36,9 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "express": "^4.18.0",
+    "express-session": "^1.17.2",
     "mssql": "^8.0.2",
+    "passport": "^0.5.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
