--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "exports": {
+    "./*": "./dist/*.js"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -22,11 +25,15 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@adminjs/express": "^4.1.0",
+    "@adminjs/express": "^4.1.3",
     "@adminjs/nestjs": "^4.0.1",
     "@adminjs/prisma": "^1.0.3",
     "@adminjs/sequelize": "^2.1.5",
+    "@azure/app-configuration": "^1.3.1",
+    "@azure/identity": "^2.0.5",
+    "@azure/keyvault-secrets": "^4.4.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
@@ -37,7 +44,9 @@
     "date-fns": "^2.28.0",
     "express": "^4.18.0",
     "express-session": "^1.17.2",
+    "mjml": "^4.12.0",
     "mssql": "^8.0.2",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
