--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,8 +12,9 @@ env:
 jobs:
   build_deploy_function_prod:
     name: Build & Deploy Function (Prod)
-    runs-on: [self-hosted]
+    runs-on: [self-hosted, jump]
     if: github.ref == 'refs/heads/main'
+    environment: production
     steps:
       # - name: 'Checkout GitHub Action'
       #   uses: actions/checkout@main
@@ -47,6 +48,7 @@ jobs:
       #     node function/shim-functions.js
       #     cp function/host.json .
 
+      # NOTE: Azure CLI is not installed by default on self-hosted runners
       - name: 'Login via Azure CLI'
         uses: azure/login@v1
         with:
