--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,15 @@
 name: 'Build & Deploy'
+
 on:
   release:
     types:
     - published
   push:
     branches: [ dev, main ]
+
+permissions:
+  id-token: write
+  contents: read
 
 env:
   AZURE_FUNCTION_NODE_VERSION: '14.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
@@ -52,13 +57,9 @@ jobs:
       - name: 'Login via Azure CLI'
         uses: azure/login@v1
         with:
-          creds: |
-            {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-            }
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       # - name: 'Deploy Function App
       #   uses: Azure/functions-action@v1
