--- a/function/package.json
+++ b/function/package.json
@@ -17,6 +17,7 @@
     "@seedo/server": "file:../server"
   },
   "devDependencies": {
+    "@nestjs/cli": "^8.0.0",
     "typescript": "^4.0.0"
   }
 }
