--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,56 +12,78 @@ permissions:
   contents: read
 
 env:
-  AZURE_FUNCTION_NODE_VERSION: '14.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  REGISTRY: uphschcich.azurecr.io
 
 jobs:
-  build_deploy_function_prod:
-    name: Build & Deploy Function (Prod)
-    runs-on: [self-hosted, jump]
-    if: github.ref == 'refs/heads/main'
-    environment: production
+  build_function:
+    name: Build Function
+    runs-on: [ ubuntu-latest ]   
+
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: 'Checkout repo'
         uses: actions/checkout@main
 
-      - name: Setup Node ${{ env.AZURE_FUNCTION_NODE_VERSION }} Environment
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ env.AZURE_FUNCTION_NODE_VERSION }}
-      
-      # # TODO: Currently function apps don't support packages in sub directories: https://github.com/Azure/azure-functions-host/issues/7345
-      # # So we build our common and server dependencies and then create SHIM directories
-      - name: 'Build Function App'
+      - name: Extract Branch name
         shell: bash
-        run: |
-          pushd server
-          npm i
-          npm run build
-          popd
-
-          pushd function          
-          npm i
-          npm run build --if-present
-          npm prune --production      
-          popd
-
-          pushd server
-          npm prune --production      
-          popd
-
-          node function/shim-functions.js
-          cp function/host.json .
-
-      # NOTE: Azure CLI is not installed by default on self-hosted runners
-      - name: 'Login via Azure CLI'
-        uses: azure/login@v1
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+               
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          install: true
 
-      - name: 'Deploy Function App'
-        uses: Azure/functions-action@v1
+      - name: Log into container registry
+        uses: docker/login-action@v1
         with:
-          app-name: use2-chci-ch-seedo-prod-function
-          package: .
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.AZURE_CLIENT_ID }}
+          password: ${{ secrets.AZURE_CLIENT_SECRET }}
+
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/seedo-function-deploy
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,format=long
+            type=semver,pattern={{raw}}
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image to registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: .
+          file: ./function/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/focus-web:${{ steps.extract_branch.outputs.branch }}
+          cache-to: type=inline,mode=max
+
+  deploy_function_prod:
+    name: Deploy Function (Prod)
+    needs: [ build_function ]
+    runs-on: [ self-hosted, jump ]
+    
+    if: github.ref == 'refs/heads/main'
+    environment: production
+
+    container:
+      image: uphschcich.azurecr.io.azurecr.io/seedo-function-deploy:main
+      credentials:
+        username: ${{ secrets.AZURE_CLIENT_ID }}
+        password: ${{ secrets.AZURE_CLIENT_SECRET }}
+      env:
+        AZURE_TENANT_ID: ${{ AZURE_TENANT_ID }}
+        AZURE_CLIENT_ID: ${{ AZURE_CLIENT_ID }}
+        AZURE_CLIENT_SECRET: ${{ AZURE_CLIENT_SECRET }}
+        AZURE_RESOURCE_GROUP: ${{ AZURE_RESOURCE_GROUP }}
+        AZURE_FUNCTION_APP_NAME: use2-chci-ch-seedo-prod-function
+
+    steps:
+      - name: Deploy function app
+        shell: bash
+        run: /home/node/entrypoint.sh
