--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,25 @@
 version: '3.8'
 services:
   server:
-    image: uphschcich.azurecr.io.azurecr.io/seedo:main
+    image: uphschcich.azurecr.io.azurecr.io/seedo-server:main
     build: 
       context: .
       dockerfile: ./server/Dockerfile
       target: production
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
+    env_file:
+      - ./.env
+    tty: true
+    stdin_open: true
+
+  function-deploy:
+    image: uphschcich.azurecr.io.azurecr.io/seedo-function-deploy:main
+    profiles: ["function-deploy"] # exclude this from routine runs, only used for function deployment
+    build:
+      context: .
+      dockerfile: ./function/Dockerfile
+      target: deploy
     env_file:
       - ./.env
     tty: true
