--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   build_function:
     name: Build Function
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, jump ]
 
     steps:
       - name: 'Checkout repo'
