--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
   build_function:
     name: Build Function
     runs-on: ubuntu-latest
+    environment: development
 
     steps:
       - name: 'Checkout repo'
