fix build caching

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
           file: ./function/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-function-deploy:${{ steps.extract_branch.outputs.branch }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-function-deploy:latest
           cache-to: type=inline,mode=max
 
   deploy_prod:
