--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
 
     # NOTE: Docker must be installed on the runner
     container:
-      image: uphschcich.azurecr.io/seedo-function-deploy:main
+      image: uphschcich.azurecr.io/seedo-function-deploy:latest
       credentials:
         username: ${{ secrets.AZURE_CLIENT_ID }}
         password: ${{ secrets.AZURE_CLIENT_SECRET }}
