--- a/function/package.json
+++ b/function/package.json
@@ -14,8 +14,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
-    "@seedo/server": "file:../server",
-    "azure-function-log-intercept": "^1.1.0"
+    "@seedo/server": "file:../server"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
