--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@main
         with:
           submodules: recursive
+          ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
 
 
       - name: Extract Branch name
