--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
       - name: 'Checkout repo'
         uses: actions/checkout@main
         with:
+          # NOTE: this deploy key strategy will only work for the combination of a public repo with a single private submodule repo.
+          # The ideal solution is to use a service/machine account with a PAT.
           submodules: recursive
           ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
 
