--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@main
         with:
           # NOTE: this deploy key strategy will only work for the combination of a public repo with a single private submodule repo.
-          # The ideal solution is to use a service/machine account with a PAT.
+          # The ideal solution is to use a service/machine account with a PAT: https://github.com/actions/checkout/issues/287
           submodules: recursive
           ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
 
