--- a/server/package.json
+++ b/server/package.json
@@ -52,6 +52,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "short-uuid": "^4.2.0",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
@@ -59,7 +60,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
+    "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.180",
     "@types/mssql": "^7.1.5",
     "@types/node": "^16.0.0",
