--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
     "./*": "./dist/*.js"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
+    "prebuild:nest": "rimraf dist",
+    "build:nest": "nest build",
+    "build:next": "next build ./client",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -41,17 +42,22 @@
     "@prisma/client": "^3.13.0",
     "adminjs": "^5.10.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.28.0",
     "express": "^4.18.0",
     "express-session": "^1.17.2",
     "mjml": "^4.12.0",
     "mssql": "^8.0.2",
+    "next": "^12.2.5",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "pg": "^8.7.3",
+    "react-chartjs-2": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "short-uuid": "^4.2.0",
     "swagger-ui-express": "^4.3.0"
   },
@@ -64,13 +70,17 @@
     "@types/lodash": "^4.14.180",
     "@types/mssql": "^7.1.5",
     "@types/node": "^16.0.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "postcss": "^8.4.16",
     "prettier": "^2.3.2",
     "prisma": "^3.13.0",
     "source-map-support": "^0.5.20",
