--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
     tty: true
     stdin_open: true
 
+  web:
+    image: uphschcich.azurecr.io/seedo-web:latest
+    build: 
+      context: .
+      dockerfile: ./web/Dockerfile
+      target: production
+    ports:
+      - target: ${WEB_PORT}
+        published: ${WEB_PORT}
+        protocol: tcp
+        mode: host
+    env_file: ./.env
+    tty: true
+    stdin_open: true
+    depends_on:
+      - server
+
   function-deploy:
     image: uphschcich.azurecr.io/seedo-function-deploy:latest
     profiles: ["function-deploy"] # exclude this from routine runs, only used for function deployment
