--- a/function/package.json
+++ b/function/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "cd ../server && nest build && cd ../function && tsc",
+    "build": "cd ../server && npm run build:nest && cd ../function && tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@azure/functions": "^3.2.0",
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.1.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^9.0.11",
     "@seedo/server": "file:../server"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "typescript": "^4.0.0"
+    "@nestjs/cli": "^9.1.1",
+    "typescript": "^4.3.5"
   }
 }
