--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@adminjs/prisma": "^1.0.3",
     "@adminjs/sequelize": "^2.1.5",
     "@azure/app-configuration": "^1.3.1",
+    "@azure/functions": "^3.2.0",
     "@azure/identity": "^2.0.5",
     "@azure/keyvault-secrets": "^4.4.0",
     "@nestjs/common": "^9.0.11",
