server build fix

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -24,6 +24,7 @@ CMD ["npm", "run", "start:debug"]
 
 # PRODUCTION IMAGE
 FROM node:16.14 AS production
+WORKDIR /app/server
 RUN npm install -g npm@8.5.0
 USER node
 COPY --chown=node:node --from=development /app /app
