--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,59 +70,59 @@ jobs:
           cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-server-cache:${{ steps.extract_branch.outputs.branch }}
           cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-server-cache:${{ steps.extract_branch.outputs.branch }},mode=max
 
-  build_web:
-    name: Build Web
-    runs-on: ubuntu-latest
+  # build_web:
+  #   name: Build Web
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: 'Checkout repo'
-        uses: actions/checkout@main
-        with:
-          # NOTE: this deploy key strategy will only with a single private submodule repo.
-          # The ideal solution is to use a service/machine account with a PAT: https://github.com/actions/checkout/issues/287
-          submodules: recursive
-          ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
+  #   steps:
+  #     - name: 'Checkout repo'
+  #       uses: actions/checkout@main
+  #       with:
+  #         # NOTE: this deploy key strategy will only with a single private submodule repo.
+  #         # The ideal solution is to use a service/machine account with a PAT: https://github.com/actions/checkout/issues/287
+  #         submodules: recursive
+  #         ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
 
 
-      - name: Extract Branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+  #     - name: Extract Branch name
+  #       shell: bash
+  #       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+  #       id: extract_branch
                
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          install: true
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
+  #       with:
+  #         install: true
 
-      - name: Log into container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.AZURE_CLIENT_ID }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}
+  #     - name: Log into container registry
+  #       uses: docker/login-action@v1
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ secrets.AZURE_CLIENT_ID }}
+  #         password: ${{ secrets.AZURE_CLIENT_SECRET }}
 
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.REGISTRY }}/seedo-web
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,format=long
-            type=semver,pattern={{raw}}
-            type=raw,value=latest,enable={{is_default_branch}}
+  #     - name: Extract Docker metadata
+  #       id: meta
+  #       uses: docker/metadata-action@v3
+  #       with:
+  #         images: ${{ env.REGISTRY }}/seedo-web
+  #         tags: |
+  #           type=ref,event=branch
+  #           type=ref,event=pr
+  #           type=sha,format=long
+  #           type=semver,pattern={{raw}}
+  #           type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image to registry
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          context: .
-          file: ./web/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-web-cache:${{ steps.extract_branch.outputs.branch }}
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-web-cache:${{ steps.extract_branch.outputs.branch }},mode=max
+  #     - name: Build and push Docker image to registry
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         push: true
+  #         context: .
+  #         file: ./web/Dockerfile
+  #         tags: ${{ steps.meta.outputs.tags }}
+  #         labels: ${{ steps.meta.outputs.labels }}
+  #         cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-web-cache:${{ steps.extract_branch.outputs.branch }}
+  #         cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-web-cache:${{ steps.extract_branch.outputs.branch }},mode=max
 
   build_function:
     name: Build Function
