--- a/server/package.json
+++ b/server/package.json
@@ -31,14 +31,15 @@
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^9.0.11",
-    "@nestjs/passport": "^8.2.1",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.1.1",
     "@prisma/client": "^5.0.0",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "express": "^4.18.0",
-    "express-session": "^1.17.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "mjml": "^4.12.0",
     "mssql": "^8.0.2",
     "nodemailer": "^6.7.5",
