--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,9 @@
   "dependencies": {
     "@azure/app-configuration": "^1.3.1",
     "@azure/functions": "^3.2.0",
-    "@azure/identity": "^2.0.5",
-    "@azure/keyvault-secrets": "^4.4.0",
+    "@azure/identity": "^3.1.3",
+    "@azure/keyvault-secrets": "^4.7.0",
+    "@databricks/sql": "git+https://github.com/databricks/databricks-sql-nodejs#7801813",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^9.0.11",
