--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-node",
+      "name": "Debug (Attach)",
+      "type": "node",
       "request": "attach",
-      "name": "Debug Server (Attach)",
       "localRoot": "${workspaceFolder}/server",
       "remoteRoot": "/app/server",
       "port": 9229,
@@ -15,6 +15,14 @@
       "sourceMaps": true,
       "skipFiles": [
         "<node_internals>/**"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/server/dist/**/*.js",
+        "!**/node_modules/**"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
       ]
     }
   ]
