--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,21 +1,19 @@
 # DEVELOPMENT IMAGE
-FROM node:16.14 AS development
+FROM node:18.17.1 AS development
 LABEL maintainer="Emeka C. Anyanwu, Center for Healthcare Innovation, Penn Medicine"
 
 # git - dependency for NPM
 # RUN apt update && apt install -yq git && apt clean
 
-RUN npm install -g npm@8.5.0
+# RUN npm install -g npm@8.5.0
 
 USER node
 
-WORKDIR /app
-COPY --chown=node:node package*.json /app/
+WORKDIR /app/server
 COPY --chown=node:node server/package*.json /app/server/
 
 RUN npm ci
 
-WORKDIR /app/server
 COPY --chown=node:node server/* .
 
 RUN npm run prisma:generate && npm run build:nest
