--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --watch --debug 0.0.0.0:9229",
     "start:prod": "node dist/main",
+    "repl": "nest start --entryFile repl",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,6 +29,7 @@
     "@azure/functions": "^3.2.0",
     "@azure/identity": "^2.0.5",
     "@azure/keyvault-secrets": "^4.4.0",
+    "@databricks/sql": "^1.4.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^9.0.11",
@@ -55,6 +57,8 @@
     "@nestjs/cli": "^9.1.1",
     "@nestjs/schematics": "^9.0.2",
     "@nestjs/testing": "^9.0.11",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.85",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.180",
