--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: 'Build & Deploy'
+name: 'build & deploy'
 
 on:
   release:
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Checkout repo'
+      - name: checkout
         uses: actions/checkout@main
         with:
           # NOTE: this deploy key strategy will only with a single private submodule repo.
@@ -29,16 +29,16 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
 
-      - name: Get branch name
+      - name: get branch name
         shell: bash
         run: echo "branch_name=$(git branch --show-current)" >> $GITHUB_ENV
                
-      - name: Set up Docker Buildx
+      - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
           install: true
 
-      - name: Log into container registry
+      - name: log into container registry
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
@@ -68,116 +68,10 @@ jobs:
           cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-server-cache:${{ env.branch_name || 'latest' }}
           cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-server-cache:${{ env.branch_name || 'latest' }},mode=max
 
-  # build_web:
-  #   name: Build Web
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: 'Checkout repo'
-  #       uses: actions/checkout@main
-  #       with:
-  #         # NOTE: this deploy key strategy will only with a single private submodule repo.
-  #         # The ideal solution is to use a service/machine account with a PAT: https://github.com/actions/checkout/issues/287
-  #         submodules: recursive
-  #         ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
-
-      # - name: Get branch name
-      #   shell: bash
-      #   run: echo "branch_name=$(git branch --show-current)" >> $GITHUB_ENV
-               
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
-  #       with:
-  #         install: true
-
-  #     - name: Log into container registry
-  #       uses: docker/login-action@v1
-  #       with:
-  #         registry: ${{ env.REGISTRY }}
-  #         username: ${{ secrets.AZURE_CLIENT_ID }}
-  #         password: ${{ secrets.AZURE_CLIENT_SECRET }}
-
-  #     - name: Extract Docker metadata
-  #       id: meta
-  #       uses: docker/metadata-action@v3
-  #       with:
-  #         images: ${{ env.REGISTRY }}/seedo-web
-  #         tags: |
-  #           type=ref,event=branch
-  #           type=ref,event=pr
-  #           type=sha,format=long
-  #           type=semver,pattern={{raw}}
-  #           type=raw,value=latest,enable={{is_default_branch}}
-
-  #     - name: Build and push Docker image to registry
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         push: true
-  #         context: .
-  #         file: ./web/Dockerfile
-  #         tags: ${{ steps.meta.outputs.tags }}
-  #         labels: ${{ steps.meta.outputs.labels }}
-  #         cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-web-cache:${{ env.branch_name || 'latest' }}
-  #         cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-web-cache:${{ env.branch_name || 'latest' }},mode=max
-
-  build_function:
-    name: Build Function
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: 'Checkout repo'
-        uses: actions/checkout@main
-        with:
-          # NOTE: this deploy key strategy will only with a single private submodule repo.
-          # The ideal solution is to use a service/machine account with a PAT: https://github.com/actions/checkout/issues/287
-          submodules: recursive
-          ssh-key: ${{ secrets.OBSERVABLES_DEPLOY_KEY }}
-
-      - name: Get branch name
-        shell: bash
-        run: echo "branch_name=$(git branch --show-current)" >> $GITHUB_ENV
-               
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          install: true
-
-      - name: Log into container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.AZURE_CLIENT_ID }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}
-
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.REGISTRY }}/seedo-function-deploy
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,format=long
-            type=semver,pattern={{raw}}
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image to registry
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          context: .
-          file: ./function/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-function-deploy-cache:${{ env.branch_name || 'latest' }}
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-function-deploy-cache:${{ env.branch_name || 'latest' }},mode=max
-
   deploy_dev:
-    name: Deploy (Dev)
+    name: deploy (dev)
     needs:
-      - build_function
       - build_server
-      # - build_web
     runs-on: [ self-hosted, jump ]
     
     if: github.ref == 'refs/heads/dev'
