--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,13 @@
     "./*": "./dist/*.js"
   },
   "scripts": {
-    "build:nest": "nest build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --watch --debug 0.0.0.0:9229",
+    "start": "nest start --builder swc --watch --debug 0.0.0.0:9229",
     "start:prod": "node dist/main",
     "repl": "nest start --entryFile repl",
+    "cli": "nest start --entryFile cli --",
+    "cli:prod": "node dist/cli --",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -44,6 +44,7 @@
     "express-session": "^1.17.3",
     "mjml": "^4.12.0",
     "mssql": "^8.0.2",
+    "nest-commander": "^3.12.0",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "pg": "^8.7.3",
@@ -54,11 +55,11 @@
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.1",
+    "@nestjs/cli": "^10.1.18",
     "@nestjs/schematics": "^9.0.2",
     "@nestjs/testing": "^9.0.11",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.85",
+    "@swc/core": "^1.3.93",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.180",
