--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,12 +36,16 @@ jobs:
         with:
           install: true
 
-      - name: log into container registry
-        uses: docker/login-action@v1
+      - name: 'az cli login'
+        uses: azure/login@v1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.AZURE_CLIENT_ID }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - name: az acr login
+        shell: bash
+        run: az acr login --name ${{ vars.CONTAINER_REGISTRY }}
 
       - name: Extract Docker metadata
         id: meta
